# Localization

./: .gitignore  AGENTS.md
aruco_imu_eskf_localization/: package.xml  setup.cfg  setup.py
aruco_imu_eskf_localization/aruco_imu_eskf_localization/: aruco_detector_node.py  board_pose_estimator.py  frame_conventions.py  pose_rviz_marker_node.py  relative_localization_node.py
aruco_imu_eskf_localization/aruco_imu_eskf_localization/common/: __init__.py  camera_calibration.py  geodesy.py
aruco_imu_eskf_localization/aruco_imu_eskf_localization/estimation/: __init__.py  board_pose_estimator.py  gyro_relative_eskf.py
aruco_imu_eskf_localization/aruco_imu_eskf_localization/filters/: __init__.py  pose_filter.py
aruco_imu_eskf_localization/aruco_imu_eskf_localization/nodes/: __init__.py  absolute_follower_odom_node.py  aruco_detector_node.py  gps_odom_node.py  pose_rviz_marker_node.py  relative_gps_node.py  relative_localization_node.py  tf_distance_viz_node.py
aruco_imu_eskf_localization/config/: cam_intrinsic.yaml  markers_board.yaml  params.yaml
aruco_imu_eskf_localization/docs/: gptreview1.md  gptreview2.md  leader_follower_contract.md  opusreview.md  system_overview.md
aruco_imu_eskf_localization/launch/: relative_localization.launch.py  vehicle_static_tf.launch.py
aruco_imu_eskf_localization/test/: test_absolute_follower_odom.py  test_aruco_detector_helpers.py  test_board_pose_estimator.py  test_camera_calibration.py  test_frame_conventions.py  test_geodesy.py  test_gyro_relative_eskf.py  test_pose_filter.py
aruco_imu_eskf_localization_cpp/: CMakeLists.txt  package.xml  plugins_description.xml
aruco_imu_eskf_localization_cpp/config/: markers_board.yaml  params.yaml
aruco_imu_eskf_localization_cpp/include/aruco_imu_eskf_localization_cpp/: board_pose_estimator.hpp  camera_calibration.hpp  diagnostics_publisher.hpp  geometry.hpp  gyro_relative_eskf.hpp
aruco_imu_eskf_localization_cpp/include/aruco_imu_eskf_localization_cpp/rviz_overlay/: aruco_imu_eskf_debug_display.hpp  overlay_utils.hpp
aruco_imu_eskf_localization_cpp/launch/: relative_localization.launch.py  vehicle_static_tf.launch.py
aruco_imu_eskf_localization_cpp/src/: board_pose_estimator.cpp  camera_calibration.cpp  diagnostics_publisher.cpp  geometry.cpp  gyro_relative_eskf.cpp
aruco_imu_eskf_localization_cpp/src/nodes/: aruco_detector_node.cpp  pose_rviz_marker_node.cpp  relative_localization_node.cpp
aruco_imu_eskf_localization_cpp/src/rviz_overlay/: aruco_imu_eskf_debug_display.cpp  overlay_utils.cpp
aruco_imu_eskf_localization_cpp/test/: test_gyro_relative_eskf.cpp
camera_lidar_extrinsic_calibrator/: package.xml  setup.cfg  setup.py
camera_lidar_extrinsic_calibrator/camera_lidar_extrinsic_calibrator/: __init__.py  calibration_utils.py  camera_lidar_extrinsic_calibrator_node.py  camera_lidar_manual_adjust_node.py
camera_lidar_extrinsic_calibrator/config/: calibrator.yaml  manual_adjuster.yaml
camera_lidar_extrinsic_calibrator/launch/: camera_lidar_extrinsic_calibrator.launch.py  camera_lidar_manual_adjust.launch.py
camera_lidar_extrinsic_calibrator/resource/: camera_lidar_extrinsic_calibrator
camera_lidar_extrinsic_calibrator/test/: test_calibration_utils.py
ebimu_ros2_driver/ebimu_driver/: CMakeLists.txt  package.xml
ebimu_ros2_driver/ebimu_driver/docs/: checklist.md  design.md
ebimu_ros2_driver/ebimu_driver/include/ebimu_driver/: ebimu_node.hpp  ebimu_parser.hpp  ebimu_sample.hpp  serial_port.hpp
ebimu_ros2_driver/ebimu_driver/launch/: ebimu_driver.launch.py
ebimu_ros2_driver/ebimu_driver/scripts/: ebimu_serial_sim.py  ebimu_tui.py
ebimu_ros2_driver/ebimu_driver/src/: ebimu_node.cpp  ebimu_parser.cpp  main.cpp  serial_port.cpp
eskf_localization_참고용/: CMakeLists.txt  package.xml  plugins_description.xml
eskf_localization_참고용/include/eskf_localization/: parameters.hpp
eskf_localization_참고용/include/eskf_localization/debug/: eskf_dead_reckoning_node.hpp  imu_dead_reckoning_node.hpp  obd_dead_reckoning_node.hpp
eskf_localization_참고용/include/eskf_localization/eskf/: gnss_update_handler.hpp
eskf_localization_참고용/src/: parameters.cpp
eskf_localization_참고용/src/debug/: eskf_dead_reckoning_main.cpp  eskf_dead_reckoning_node.cpp  imu_dead_reckoning_node.cpp  obd_dead_reckoning_main.cpp  obd_dead_reckoning_node.cpp
eskf_localization_참고용/src/eskf/: gnss_update_handler.cpp  odom_builder.cpp
eskf_localization_참고용/src/node/: cb_gnss.cpp  cb_imu.cpp  cb_initialpose.cpp  cb_pointcloud.cpp  core.cpp  publish.cpp
eskf_localization_참고용/src/preprocess/: imu_preprocessor.cpp
eskf_localization_참고용/src/rviz_overlay/: gnss_debug_display.cpp  overlay_utils.cpp  status_chart_helper.cpp  update_status_helper.cpp  vehicle_data_helper.cpp
eskf_localization_참고용/src/util/: tf_cache.cpp
follower_camera_lidar_projection/: package.xml  setup.cfg  setup.py
follower_camera_lidar_projection/config/: follower_cam_intrinsic_20260407.yaml  projection.yaml  provisional_lidar_to_camera_extrinsic.yaml
follower_camera_lidar_projection/follower_camera_lidar_projection/: camera_lidar_projection_node.py
follower_camera_lidar_projection/launch/: camera_lidar_projection.launch.py
follower_camera_lidar_projection/test/: test_projection_config.py
follower_lidar_driver/: CMakeLists.txt  package.xml
follower_lidar_driver/config/: follower_lidar.yaml
follower_lidar_driver/launch/: follower_lidar.launch.py  follower_lidar_projection_bringup.launch.py
follower_lidar_driver/src/: follower_lidar_node.cpp
follower_lidar_localization/: CMakeLists.txt  package.xml
follower_lidar_localization/include/follower_lidar_localization/: wheel_fitting.hpp
follower_lidar_localization/launch/: leader_wheel_fitting.launch.py
follower_lidar_localization/src/: wheel_fitting.cpp
follower_lidar_localization/src/nodes/: leader_wheel_fitting_node.cpp
follower_lidar_localization/test/: test_wheel_fitting.cpp
kiss-icp/ros/: CMakeLists.txt
kiss-icp/ros/config/: config.yaml
kiss-icp/ros/launch/: multi_lidar.launch.py
kiss-icp/ros/src/: OdometryServer.cpp  OdometryServer.hpp
(+100 files in other folders)
